--- a/packages/patient/package.json
+++ b/packages/patient/package.json
@@ -1,6 +1,6 @@
 {
   "name": "patient",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "private": true,
   "description": "",
   "templateInfo": {
@@ -51,7 +51,7 @@
     "@tarojs/runtime": "4.0.7",
     "@tarojs/shared": "4.0.7",
     "@tarojs/taro": "4.0.7",
-    "luca_components": "*",
+    "luca_components": "^0.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
