--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   ],
   "version": "independent",
   "dependencies": {
-    "doctor": "^1.0.0",
-    "patient": "^1.0.0",
-    "luca_components": "^0.0.2"
+    "doctor": "*",
+    "patient": "*",
+    "luca_components": "*"
   },
   "devDependencies": {
     "lerna": "^8.1.9"
