--- a/packages/doctor/package.json
+++ b/packages/doctor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doctor",
-  "version": "0.0.6",
+  "version": "0.0.7-alpha.0",
   "private": true,
   "description": "",
   "templateInfo": {
